last change with name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "What-Dog-Am-I",
-  "name": "Create React App Sample",
+  "name": "What-Dog-Am-I",
   "icons": [
     {
       "src": "favicon.ico",
